--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prepublishOnly": "npm run build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "cm": "cz"
+    "cm": "cz",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -60,7 +61,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.15",
     "glob": "^10.3.10",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
